# noga

./: README.md
docs/: CNAME  _config.yml  archive.md  cookies.md  index.md  oswa.md  wap2021.md
docs/_layouts/: default.html  post.html
docs/_posts/2020/: 2020-02-23-testing.md  2020-02-23-welkom-bij-noga.md  2020-03-09-cookies.md  2020-04-09-borgesius-cookies.md  2020-06-10-oswa.md  2020-06-10-technieken.md  2020-06-12-log-replay.md  2020-06-12-oswa_f.md  2020-06-18-ga-and-matomo-tracking.md  2020-06-18-matomo-tracking-configurations.md  2020-06-19-features-van-matomo-en-ga.md  2020-06-19-matomo-privacy.md  2020-11-23-matomo-opzetten  2020-11-23-matomo-opzetten.md  2020-12-01-matomo-geavanceerd.md
docs/_posts/2021/: 2021-01-25-pilot-radboud-universiteit.md  2021-01-29-pilot-radboud-universiteit.md  2021-04-12-scenarios-radboud-universiteit.md  2021-05-11-gebruiksvriendelijkheid.md  2021-11-30-matomo-in-wordpress.md  2021-12-07-web-analytics-privacy-workshop.md  2021-12-23-plausible-ervaringen.md
docs/_posts/2022/: 2022-03-14-google-analytics-gebruik.md
docs/assets/css/: style.scss
install/: .gitignore  README.md  install.sh
install/conf/: .gitignore  ssl.conf
install/scripts/archiving/: archive-reports
install/scripts/backup/: backup-db  backup-matomo  clean-backups  restore-db  restore-matomo
install/templates/: db.env  docker-compose.yml  in-file.cnf  nginx.conf  setup-db.sql
src/: .gitignore  README.md  analyse_results.py  crawl.py  parse_tracker_data.py  pyproject.toml
src/data/: csrankings.py  wikipedia.py
(+10 files in other folders)
